--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@ playground.xcworkspace
 #
 # Pods/
 
+vendor/Pods/* 
+*.orig
+
 # Carthage
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
